feat: migrate home section to new criteria
